remove icon decoration

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2015,6 +2015,9 @@ input, select, textarea {
 		border-bottom: none;
 		position: relative;
 	}
+		.icon a {
+		text-decoration: none;
+		}
 
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
