--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2015,11 +2015,10 @@ input, select, textarea {
 		border-bottom: none;
 		position: relative;
 	}
-	.icons .icon a {
+		.icon a {
 		text-decoration: none !important;
 		border-bottom: none !important;
-	}
-
+		}
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
